--- a/WAI-ARIA_usage.html
+++ b/WAI-ARIA_usage.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>WAI-ARIA usage</title>
-  <link href="css/basic.css" rel="stylesheet" type="text/css">
+  <link href="https://thepaciellogroup.github.io/AT-browser-tests/style/styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
 	<h1>WAI-ARIA usage</h1>
