--- a/WAI-ARIA_usage.html
+++ b/WAI-ARIA_usage.html
@@ -8,6 +8,7 @@
 <body>
 	<h1>WAI-ARIA usage</h1>
 	<p>Add the <a href="javascript:void((function(){var objScript=document.createElement('script');objScript.setAttribute('src','https://juicystudio.com/tpg/ARC/aria-usage.js');document.body.appendChild(objScript);})());">WAI-ARIA usage</a> bookmarlet to evaluate <a href="https://www.w3.org/TR/html-aria/#docconformance">document conformance requirements for use of ARIA attributes in HTML</a> and <a href="https://www.w3.org/TR/html-aria/#x4-allowed-aria-roles-states-and-properties">allowed ARIA roles, states, and properties.</a></p>
+	<p> Fork/bug/PR on <a href="https://github.com/ThePacielloGroup/WAI-ARIA-Usage">GitHub</a></p>
 
 
 </body>
