--- a/WAI-ARIA_usage.html
+++ b/WAI-ARIA_usage.html
@@ -2,13 +2,21 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>WAI-ARIA usage</title>
-  <link href="https://thepaciellogroup.github.io/AT-browser-tests/style/styles.css" rel="stylesheet" type="text/css">
+  <title>WAI-ARIA Usage</title>
+  <link href="https://thepaciellogroup.github.io/AT-browser-tests/style/styles.css" rel="stylesheet">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 	<h1>WAI-ARIA usage</h1>
-	<p>Add the <a href="javascript:void((function(){var objScript=document.createElement('script');objScript.setAttribute('src','https://juicystudio.com/tpg/ARC/aria-usage.js');document.body.appendChild(objScript);})());">WAI-ARIA usage</a> bookmarklet to evaluate <a href="https://www.w3.org/TR/html-aria/#docconformance">document conformance requirements for use of ARIA attributes in HTML</a> and <a href="https://www.w3.org/TR/html-aria/#x4-allowed-aria-roles-states-and-properties">allowed ARIA roles, states, and properties.</a></p>
-	<p> Fork/bug/PR on <a href="https://github.com/ThePacielloGroup/WAI-ARIA-Usage">GitHub</a></p>
+	<p>
+		Add the 
+		<a href="javascript:void((function(){var objScript=document.createElement('script');objScript.setAttribute('src','https://thepaciellogroup.github.io/WAI-ARIA-Usage/aria-usage.js');document.body.appendChild(objScript);})());">WAI-ARIA Usage</a> 
+		bookmarklet to evaluate <a href="https://www.w3.org/TR/html-aria/#docconformance">document conformance requirements for use of ARIA attributes in HTML</a> 
+		and <a href="https://www.w3.org/TR/html-aria/#x4-allowed-aria-roles-states-and-properties">allowed ARIA roles, states, and properties.</a>
+	</p>
+	<p>
+		Fork/bug/PR on <a href="https://github.com/ThePacielloGroup/WAI-ARIA-Usage">GitHub</a>.
+	</p>
 
 
 </body>
